code/force-app/main/default/objects/FinServ__LookupSearchConf__mdt/fields/FinServ__ImplementationClass__c.field-meta.xml
<CustomField>
    <fullName>FinServ__ImplementationClass__c</fullName>
    <label>Implementation Class</label>
    <length>150</length>
    <required>true</required>
    <type>Text</type>
</CustomField>