code/force-app/main/default/objects/FinServ__LookupSearchConf__mdt/fields/FinServ__ObjectName__c.field-meta.xml
<CustomField>
    <fullName>FinServ__ObjectName__c</fullName>
    <label>Object Name</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>